--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "jello-optimizer-jsp-xss",
   "description": "Jello optimizer xss for JSP",
   "version": "0.0.1",
+  "author":{
+    "name": "jonecasper",
+    "email": "xu.chenhui@live.com"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/xch89820/jello-optimizer-jsp-xss.git"
